--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="title_activity_setting">SettingActivity</string>
     <string name="title_activity_about">AboutActivity</string>
 
-    <string name="app_name">Flashlight</string>
+    <string name="app_name">Bolt2017</string>
     <string name="color_mode">Color</string>
     <string name="color_cancel">Cancel</string>
     <string name="setting_title">Settings</string>
